-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.369 2008-12-12 18:31:31 guru Exp $
-----------------------------------------------------------------------------------------
2008-12-12	pwessel
	* gmt_qsort.c:		We have added GMT_qsort which is a 64-bit compliant version
				of qsort.  The latter is broken under OS X 64-bit and is
				thus substituted on that platform for 64-bit compilations
				until Apple fixes the problem.
				
2008-12-10	pwessel
	* psxyz.c:		Did not pick up y-size for column from input data file.
	* gmt_support.c:	GMT_polygon_is_open did not test for empty polygons (n = 0).
	* grdfilter.c:		New options -Np to honor any NaNs found so output can be NaN,
				-Nr to replace output node with NaN if input node is NaN, and
				-Ni to ignore NaNs [Default].
	
2008-12-09	pwessel
	* grdreformat.c:	Did not initialize grid header structure and could get
				netCDF error "Named variable does not exist in file"
	* grd2cpt.c:		---"---
	* grdedit.c:		---"---
	* grdtrack.c:		---"---
	* grdvector.c:		---"---
	* grdview.c:		---"---
	* grdvolume.c:		---"---
	* mex/grdinfo.c:	---"---
	* mex/grdread.c:	---"---
	
2008-12-08	pwessel
	* gmt_init.c:		-JXh was misinterpreted but -JXv was OK.  Now fixed.
	* gmt_plot.c:		Bug in GMT_fill_polygon that affected polygon outline.
				3D text box was computed incorrectly.
	* gmt_map.c:		Added improved clipping for geographic polygons using
				the Sutherland & Hodgman algorithm when there are no map
				jumps in longitude.  Fixes problem with tiny strips of
				"land" along map perimeter for some projections.
	* gmt_math.h:		Check for macro definitions for system math functions.
	* gmt_vector.c:		GMT_resample_path would add 360 to points along meridians.
	* pslegend.c:		Can now use rectangle among the symbols.
	
2008-12-05	pwessel
	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using